Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-120976

REG: QPushButton of a menu will still appear pressed even after you click somewhere outside the button area.

XMLWordPrintable

    • Linux/X11, macOS, Windows
    • 343551ffa (dev), cb6cdad07 (6.7), a9d5e1efa (6.6)

      When a QPushButton of a menu is already pressed, and then you click somewhere outside the button area, the button continues to appear pressed.

      To reproduce the issue, follow the steps below on the project attached to this report:

      -Click the menu button.

      • Click somewhere on the main window.
      • The menu will be closed but the button will still appear pressed.

        1. untitled15.zip
          8 kB
          Mehdi Belila
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            edcooke Ed Cooke (Inactive)
            mahdi.belila Mehdi Belila
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes